--- a/src/mobilestyles.css
+++ b/src/mobilestyles.css
@@ -77,7 +77,7 @@ a {
 	max-width:100%;
 	width:100%;
 	background-color:#d3d3d3; 
-	height:48px; 
+	height:49px; 
 	padding: 12 0 0 0;  
 	border-radius:0px 0px 5px 5px
 
@@ -130,6 +130,7 @@ a {
 	font-size: 35px; 
 	color:white; 
 	background-color:rgb(87,89,93, 0.8); 
+	background:rgb(87,89,93, 0.8); 
 	padding: 5px 5px;
 	width:4em;
 	%width:170px;
