--- a/src/mobilestyles.css
+++ b/src/mobilestyles.css
@@ -77,7 +77,7 @@ a {
 	max-width:100%;
 	width:100%;
 	background-color:#d3d3d3; 
-	height:49px; 
+	height:51px; 
 	padding: 12 0 0 0;  
 	border-radius:0px 0px 5px 5px
 
@@ -125,6 +125,14 @@ a {
 	cursor:auto;
 }
 
+
+#results_table{
+	
+	font-size:30px;
+	
+	
+}
+
 .userInput{
 	
 	font-size: 35px; 
@@ -144,7 +152,7 @@ a {
 }
 
 .subtitle{
-	font-size: 40px;
+	font-size: 38px;
 }
 
 
