--- a/src/mobilestyles.css
+++ b/src/mobilestyles.css
@@ -77,7 +77,7 @@ a {
 	max-width:100%;
 	width:100%;
 	background-color:#d3d3d3; 
-	height:51px; 
+	height:54px; 
 	padding: 12 0 0 0;  
 	border-radius:0px 0px 5px 5px
 
@@ -128,7 +128,7 @@ a {
 
 #results_table{
 	
-	font-size:30px;
+	font-size:25px;
 	
 	
 }
@@ -140,7 +140,7 @@ a {
 	background-color:rgb(87,89,93, 0.8); 
 	background:rgb(87,89,93, 0.8); 
 	padding: 5px 5px;
-	width:4em;
+	%width:4em;
 	%width:170px;
 	
 	
