--- a/src/IEstyles.css
+++ b/src/IEstyles.css
@@ -136,6 +136,13 @@ a {
 	
 }
 
+.userInput.fw{
+
+	width:5em;
+
+	
+}
+
 .maintitle{
 	font-size: 70px; 
 	margin-bottom: -5px ;
@@ -188,15 +195,15 @@ input::-webkit-inner-spin-button {
 
 .query{
 	
-	 %background-color:#d3d3d3;
-	 border:solid;
-	 border-width:3px;
-	 border-color:rgb(87,89,93, 1);
+	 background-color:#d3d3d3;
+	 %border:solid;
+	 %border-width:3px;
+	 %border-color:rgb(87,89,93, 1);
 	 font-size:15px;
 	 text-align:center; 
 	 padding: 10px 10px; 
 	 margin-top:5px;
-	 border-radius:6px;
+	 %border-radius:6px;
 }
 
 .anova-bar-odd.selected  {
