--- a/src/mobilestyles.css
+++ b/src/mobilestyles.css
@@ -51,7 +51,7 @@ h2 {
 	padding: 8px 8px; 
 	background-color:rgb(87,89,93, 0.8);
 	color:white;
-	margin-right:20px;
+	margin-right:30px;
 	font-size:40px;
 	
 }
@@ -86,7 +86,7 @@ a {
 	max-width:100%;
 	width:100%;
 	background-color:#d3d3d3; 
-	height:54px; 
+	height:53px; 
 	padding: 12 0 0 0;  
 	border-radius:0px 0px 5px 5px
 
@@ -111,6 +111,7 @@ a {
 	
 	padding: 2px 10px 5px 10px;
 	margin-right:15px;
+	margin-top:30px;
 	%margin-bottom:-5px;
 	background-color:rgb(87,89,93, 0.8);
 	border-radius:5px 5px 0px 0px;
@@ -140,9 +141,9 @@ a {
 .userInput{
 	
 	font-size: 35px; 
-	color:white; 
-	background-color:rgb(87,89,93, 0.8); 
-	background:rgb(87,89,93, 0.8); 
+	color:black; 
+	%background-color:rgb(87,89,93, 0.8); 
+	%background:rgb(87,89,93, 0.8); 
 	padding: 5px 5px;
 
 	
@@ -209,15 +210,15 @@ input::-webkit-inner-spin-button {
 
 .query{
 	
-	 %background-color:#d3d3d3;
-	 border:solid;
-	 border-width:3px;
-	 border-color:rgb(87,89,93, 1);
+	 background-color:#d3d3d3;
+	% border:solid;
+	 %border-width:3px;
+	 %border-color:rgb(87,89,93, 1);
 	 font-size:35px;
 	 text-align:center; 
 	 padding: 10px 10px; 
 	 margin-top:5px;
-	 border-radius:6px;
+	 %border-radius:6px;
 	 line-height:2.5em;
 }
 
