--- a/src/IEstyles.css
+++ b/src/IEstyles.css
@@ -204,6 +204,7 @@ input::-webkit-inner-spin-button {
 	 padding: 10px 10px; 
 	 margin-top:5px;
 	 %border-radius:6px;
+	 line-height:2em;
 }
 
 .anova-bar-odd.selected  {
