--- a/src/mobilestyles.css
+++ b/src/mobilestyles.css
@@ -60,7 +60,8 @@ h2 {
 .linkspan.smallfont{
 
 
-	font-size:28px;
+	font-size:22px;
+	margin-right:0px;
 	
 }
 
@@ -86,10 +87,11 @@ a {
 	max-width:100%;
 	width:100%;
 	background-color:#d3d3d3; 
-	height:53px; 
+	height:52px; 
 	padding: 12 0 0 0;  
-	border-radius:0px 0px 5px 5px
-
+	border-radius:0px 0px 5px 5px;
+	-webkit-border-radius:0px 0px 5px 5px;
+	-moz-border-radius:0px 0px 5px 5px;
 }
 
 
@@ -115,6 +117,8 @@ a {
 	%margin-bottom:-5px;
 	background-color:rgb(87,89,93, 0.8);
 	border-radius:5px 5px 0px 0px;
+	-webkit-border-radius:5px 5px 0px 0px;
+	-moz-border-radius:5px 5px 0px 0px;
 	font-size:38px;
 	color:white;
 	cursor:pointer;
@@ -249,7 +253,7 @@ input::-webkit-inner-spin-button {
 
 .results-row{
 
-	font-size:25px;
+	font-size:22px;
 	font-family: Arial; 
 	
 }
@@ -325,6 +329,7 @@ td b.sort-by {
 }
 b.sort-by:before,
 b.sort-by:after {
+	font-size:60px;
 	border: 4px solid transparent;
 	content: "";
 	display: block;
