--- a/src/styles.css
+++ b/src/styles.css
@@ -81,7 +81,9 @@ a {
 	background-color:#d3d3d3; 
 	height:26px; 
 	padding: 12 0 0 0;  
-	border-radius:0px 0px 5px 5px
+	border-radius:0px 0px 5px 5px;
+	-webkit-border-radius:0px 0px 5px 5px;
+	-moz-border-radius:0px 0px 5px 5px;
 
 }
 
@@ -105,6 +107,8 @@ a {
 	margin-right:10px;
 	background-color:rgb(87,89,93, 0.8);
 	border-radius:5px 5px 0px 0px;
+	-webkit-border-radius:5px 5px 0px 0px;
+	-moz-border-radius:5px 5px 0px 0px;
 	font-size:18px;
 	color:white;
 	cursor:pointer;
@@ -197,6 +201,7 @@ input::-webkit-inner-spin-button {
 	 padding: 10px 10px; 
 	 margin-top:5px;
 	 %border-radius:6px;
+	 line-height:2em;
 }
 
 .anova-bar-odd.selected  {
