--- a/src/mobilestyles.css
+++ b/src/mobilestyles.css
@@ -89,9 +89,9 @@ a {
 	background-color:#d3d3d3; 
 	height:52px; 
 	padding: 12 0 0 0;  
-	border-radius:0px 0px 5px 5px;
-	-webkit-border-radius:0px 0px 5px 5px;
-	-moz-border-radius:0px 0px 5px 5px;
+	border-radius:0px 0px 10px 10px;
+	-webkit-border-radius:0px 0px 10px 10px;
+	-moz-border-radius:0px 0px 10px 10px;
 }
 
 
@@ -116,9 +116,9 @@ a {
 	margin-top:30px;
 	%margin-bottom:-5px;
 	background-color:rgb(87,89,93, 0.8);
-	border-radius:5px 5px 0px 0px;
-	-webkit-border-radius:5px 5px 0px 0px;
-	-moz-border-radius:5px 5px 0px 0px;
+	border-radius:10px 10px 0px 0px;
+	-webkit-border-radius:10px 10px 0px 0px;
+	-moz-border-radius:10px 10px 0px 0px;
 	font-size:38px;
 	color:white;
 	cursor:pointer;
@@ -330,7 +330,7 @@ td b.sort-by {
 b.sort-by:before,
 b.sort-by:after {
 	font-size:60px;
-	border: 4px solid transparent;
+	border: 10px solid transparent;
 	content: "";
 	display: block;
 	height: 0;
@@ -341,9 +341,21 @@ b.sort-by:after {
 }
 b.sort-by:before {
 	border-bottom-color: white;
-	margin-top: -9px;
+	margin-top: -25px;
 }
 b.sort-by:after {
 	border-top-color: white;
 	margin-top: 1px;
 }
+
+
+
+.nbar{
+	position:absolute; 
+	background-color:#57595D; 
+	height: 14px; 
+	margin-top: -6px;  
+	cursor: auto
+}
+
+
