--- a/src/mobilestyles.css
+++ b/src/mobilestyles.css
@@ -59,8 +59,8 @@ h2 {
 
 .linkspan.smallfont{
 
-
-	font-size:22px;
+	padding: 4px 4px; 
+	font-size:20px;
 	margin-right:0px;
 	
 }
@@ -263,7 +263,7 @@ input::-webkit-inner-spin-button {
 
 	color:white;
 	background-color:#57595D;
-	font-size:35px;
+	font-size:25px;
 	
 	
 }
@@ -351,10 +351,11 @@ b.sort-by:after {
 
 
 .nbar{
-	position:absolute; 
+	position:relative; 
 	background-color:#57595D; 
-	height: 14px; 
-	margin-top: -6px;  
+	height: 1em; 
+	margin-top: 2px;  
+	margin-bottom: 2px;  
 	cursor: auto
 }
 
