--- a/src/styles.css
+++ b/src/styles.css
@@ -326,9 +326,10 @@ b.sort-by:after {
 
 
 .nbar{
-	position:absolute; 
+	position:relative; 
 	background-color:#57595D; 
-	height: 14px; 
-	margin-top: -6px;  
+	height: 1em; 
+	margin-top: 2px;  
+	margin-bottom: 2px;  
 	cursor: auto
 }
