Histogram svg mobile scaling

--- a/src/mobilestyles.css
+++ b/src/mobilestyles.css
@@ -255,6 +255,7 @@ input::-webkit-inner-spin-button {
 
 	font-size:22px;
 	font-family: Arial; 
+	line-height:1.2em;
 	
 }
 
@@ -263,7 +264,7 @@ input::-webkit-inner-spin-button {
 
 	color:white;
 	background-color:#57595D;
-	font-size:25px;
+	font-size:22px;
 	
 	
 }
@@ -354,8 +355,8 @@ b.sort-by:after {
 	position:relative; 
 	background-color:#57595D; 
 	height: 1em; 
-	margin-top: 2px;  
-	margin-bottom: 2px;  
+	margin-top: 0.1em;  
+	margin-bottom: 0.1em;  
 	cursor: auto
 }
 
