--- a/src/styles.css
+++ b/src/styles.css
@@ -233,6 +233,7 @@ input::-webkit-inner-spin-button {
 
 	font-size:14px;
 	font-family: Arial; 
+	line-height:18px
 	
 }
 
@@ -329,7 +330,7 @@ b.sort-by:after {
 	position:relative; 
 	background-color:#57595D; 
 	height: 1em; 
-	margin-top: 2px;  
-	margin-bottom: 2px;  
+	margin-top: 0.1em;  
+	margin-bottom: 0.1em;  
 	cursor: auto
 }
