--- a/src/styles.css
+++ b/src/styles.css
@@ -33,7 +33,7 @@ body {
 .linkspan{
 
 	padding: 3px; 
-	background-color:rgb(87,89,93, 0.8);
+	background-color:rgba(87,89,93, 0.8);
 	color:white;
 	margin-right:20px;
 	font-size:18px;
@@ -63,7 +63,7 @@ body {
 
 .linkspan:hover{
 	
-	background-color:rgb(87,89,93, 1);
+	background-color:rgba(87,89,93, 1);
 }
 
 
@@ -105,7 +105,7 @@ a {
 	
 	padding: 2px 10px 5px 10px;
 	margin-right:10px;
-	background-color:rgb(87,89,93, 0.8);
+	background-color:rgba(87,89,93, 0.8);
 	border-radius:5px 5px 0px 0px;
 	-webkit-border-radius:5px 5px 0px 0px;
 	-moz-border-radius:5px 5px 0px 0px;
@@ -117,7 +117,7 @@ a {
 
 .tab:hover{
 	
-	background-color:rgb(87,89,93, 1);
+	background-color:rgba(87,89,93, 1);
 }
 
 
@@ -134,7 +134,7 @@ a {
 	
 	font-size: 16px; 
 	color:black; 
-	%background-color:rgb(87,89,93, 0.8); 
+	%background-color:rgba(87,89,93, 0.8); 
 	padding: 3px 3px;
 	%width:170px;
 	
@@ -183,7 +183,7 @@ input::-webkit-inner-spin-button {
 
 
 .anova-bar-odd {
-	fill:rgb(87,89,93, 0.8); %#57595D;
+	fill:rgba(87,89,93, 0.8); %#57595D;
 	stroke-width:0;
 	stroke:black;
 	%fill-opacity: 0.7;
@@ -195,7 +195,7 @@ input::-webkit-inner-spin-button {
 	 background-color:#d3d3d3;
 	 %border:solid;
 	 %border-width:3px;
-	 %border-color:rgb(87,89,93, 1);
+	 %border-color:rgba(87,89,93, 1);
 	 font-size:15px;
 	 text-align:center; 
 	 padding: 10px 10px; 
@@ -205,7 +205,7 @@ input::-webkit-inner-spin-button {
 }
 
 .anova-bar-odd.selected  {
-	fill:rgb(87,89,93, 1);
+	fill:rgba(87,89,93, 1);
 	stroke-width:0;
 	stroke:black;
 	%fill-opacity: 1;
@@ -214,7 +214,7 @@ input::-webkit-inner-spin-button {
 
 
 .anova-bar-even {
-	fill: rgb(0,154,205, 0.8); %  rgb(250,190,40, 0.8); %#FABE28;
+	fill: rgba(0,154,205, 0.8); %  rgba(250,190,40, 0.8); %#FABE28;
 	stroke-width:0;
 	stroke:black;
 	%fill-opacity: 0.7;
@@ -223,7 +223,7 @@ input::-webkit-inner-spin-button {
 
 
 .anova-bar-even.selected {
-	fill:rgb(0,154,205,  1); % rgb(250,190,40,1);
+	fill:rgba(0,154,205,  1); % rgba(250,190,40,1);
 	stroke-width:0;
 	stroke:black;
 	%fill-opacity: 1;
@@ -249,7 +249,7 @@ input::-webkit-inner-spin-button {
 
 
 .results-row:nth-child(odd){
-	background-color:rgb(87,89,93, 0.2);
+	background-color:rgba(87,89,93, 0.2);
 }
 
 
@@ -259,8 +259,8 @@ input::-webkit-inner-spin-button {
 
 
 .error-bar-odd {
-	stroke:rgb(0,154,205,  1); %rgb(250,190,40,1);
-	fill:rgb(0,154,205,  1); %rgb(250,190,40,1);
+	stroke:rgba(0,154,205,  1); %rgba(250,190,40,1);
+	fill:rgba(0,154,205,  1); %rgba(250,190,40,1);
 	stroke-width:2.5;
 	 
 }
@@ -274,8 +274,8 @@ input::-webkit-inner-spin-button {
 
 
 .error-bar-even {
-	stroke:rgb(87,89,93, 1);
-	fill:rgb(87,89,93, 1);
+	stroke:rgba(87,89,93, 1);
+	fill:rgba(87,89,93, 1);
 	stroke-width:2.5;
 	 
 }
