Safari svg fix, safari link fix

--- a/src/IEstyles.css
+++ b/src/IEstyles.css
@@ -48,8 +48,8 @@ body {
 .linkspan{
 
 	padding: 3px; 
-	%background:rgb(87,89,93, 0.8);
-	%color:white;
+	background:rgba(87,89,93, 0.8);
+	color:white;
 	margin-right:20px;
 	font-size:18px;
 	
@@ -66,7 +66,7 @@ body {
 
 .linkspan:hover{
 	
-	background-color:rgb(87,89,93, 1);
+	background-color:rgba(87,89,93, 1);
 }
 
 
@@ -106,7 +106,7 @@ a {
 	
 	padding: 2px 10px 5px 10px;
 	margin-right:10px;
-	background-color:rgb(87,89,93, 0.8);
+	background-color:rgba(87,89,93, 0.8);
 	border-radius:5px 5px 0px 0px;
 	font-size:18px;
 	color:white;
@@ -116,7 +116,7 @@ a {
 
 .tab:hover{
 	
-	background-color:rgb(87,89,93, 1);
+	background-color:rgba(87,89,93, 1);
 }
 
 
@@ -186,7 +186,7 @@ input::-webkit-inner-spin-button {
 
 
 .anova-bar-odd {
-	fill:rgb(87,89,93, 0.8); %#57595D;
+	fill:rgba(87,89,93, 0.8); %#57595D;
 	stroke-width:0;
 	stroke:black;
 	%fill-opacity: 0.7;
@@ -198,7 +198,7 @@ input::-webkit-inner-spin-button {
 	 background-color:#d3d3d3;
 	 %border:solid;
 	 %border-width:3px;
-	 %border-color:rgb(87,89,93, 1);
+	 %border-color:rgba(87,89,93, 1);
 	 font-size:15px;
 	 text-align:center; 
 	 padding: 10px 10px; 
@@ -208,7 +208,7 @@ input::-webkit-inner-spin-button {
 }
 
 .anova-bar-odd.selected  {
-	fill:rgb(87,89,93, 1);
+	fill:rgba(87,89,93, 1);
 	stroke-width:0;
 	stroke:black;
 	%fill-opacity: 1;
@@ -217,7 +217,7 @@ input::-webkit-inner-spin-button {
 
 
 .anova-bar-even {
-	fill: rgb(0,154,205, 0.8); %  rgb(250,190,40, 0.8); %#FABE28;
+	fill: rgba(0,154,205, 0.8); %  rgba(250,190,40, 0.8); %#FABE28;
 	stroke-width:0;
 	stroke:black;
 	%fill-opacity: 0.7;
@@ -226,7 +226,7 @@ input::-webkit-inner-spin-button {
 
 
 .anova-bar-even.selected {
-	fill:rgb(0,154,205,  1); % rgb(250,190,40,1);
+	fill:rgba(0,154,205,  1); % rgba(250,190,40,1);
 	stroke-width:0;
 	stroke:black;
 	%fill-opacity: 1;
@@ -251,7 +251,7 @@ input::-webkit-inner-spin-button {
 
 
 .results-row:nth-child(odd){
-	background-color:rgb(87,89,93, 0.2);
+	background-color:rgba(87,89,93, 0.2);
 }
 
 
@@ -261,8 +261,8 @@ input::-webkit-inner-spin-button {
 
 
 .error-bar-odd {
-	stroke:rgb(0,154,205,  1); %rgb(250,190,40,1);
-	fill:rgb(0,154,205,  1); %rgb(250,190,40,1);
+	stroke:rgba(0,154,205,  1); %rgba(250,190,40,1);
+	fill:rgba(0,154,205,  1); %rgba(250,190,40,1);
 	stroke-width:2.5;
 	 
 }
@@ -276,8 +276,8 @@ input::-webkit-inner-spin-button {
 
 
 .error-bar-even {
-	stroke:rgb(87,89,93, 1);
-	fill:rgb(87,89,93, 1);
+	stroke:rgba(87,89,93, 1);
+	fill:rgba(87,89,93, 1);
 	stroke-width:2.5;
 	 
 }
