--- a/src/mobilestyles.css
+++ b/src/mobilestyles.css
@@ -57,6 +57,58 @@ h2 {
 }
 
 
+.githublink{
+
+	padding: 3px; 
+	background-color:rgba(87,89,93, 0.8);
+	color:white;
+	margin-right:20px;
+	font-size:16px;
+	
+}
+
+
+
+ul {
+    list-style: none;
+    padding-left: 0;
+}
+ul li {
+    position: relative;
+    padding-left: 20px;
+}
+
+ul li:before {
+    content: '';
+    width: 10px;
+    height: 10px;
+    position: absolute;
+    background-image: url('Images/bullet.png');
+    background-size: cover;
+    background-position: center;
+    left: 0;
+    top: 0.6em;
+    transform: translateY(-50%);
+}
+
+
+
+ul ul li:before {
+    content: '';
+    width: 8px;
+    height: 8px;
+    position: absolute;
+    background-image: url('Images/bulletInner.png');
+    background-size: cover;
+    background-position: center;
+    left: 0;
+    top: 0.6em;
+    transform: translateY(-50%);
+}
+
+
+
+
 .linkspan.smallfont{
 
 	padding: 4px 4px; 
@@ -81,19 +133,6 @@ a {
 }
 
 
-.tabs-bg{
-
-	min-width:100%;
-	max-width:100%;
-	width:100%;
-	background-color:#d3d3d3; 
-	height:52px; 
-	padding: 12 0 0 0;  
-	border-radius:0px 0px 10px 10px;
-	-webkit-border-radius:0px 0px 10px 10px;
-	-moz-border-radius:0px 0px 10px 10px;
-}
-
 
 .header {
 	background-color: #57595D;
@@ -108,38 +147,6 @@ a {
 	font-family: "Arial";
 	%box-shadow: 5px 4px 8px 0 #424f4f, 6px 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-
-.tab{
-	
-	padding: 2px 10px 5px 10px;
-	margin-right:15px;
-	margin-top:30px;
-	%margin-bottom:-5px;
-	background-color:rgba(87,89,93, 0.8);
-	border-radius:10px 10px 0px 0px;
-	-webkit-border-radius:10px 10px 0px 0px;
-	-moz-border-radius:10px 10px 0px 0px;
-	font-size:38px;
-	color:white;
-	cursor:pointer;
-	
-}
-
-.tab:hover{
-	
-	background-color:rgba(87,89,93, 1);
-}
-
-
-
-.tab.selected{
-	%font-weight:bold;
-	background-color:white;
-	color:black;
-	cursor:auto;
-}
-
-
 
 
 .userInput{
@@ -202,6 +209,18 @@ input::-webkit-inner-spin-button {
 	line-height: 1.3em
 	
 }
+
+
+.blog-div{
+	width:95%; 
+	text-align:justify; 
+	margin:auto; 
+	line-height: 1.3em;
+	margin-bottom: 100px;
+	position:relative;
+}
+
+
 
 
 .anova-bar-odd {
@@ -366,3 +385,127 @@ b.sort-by:after {
 	width:100%;
 	
 }
+
+
+
+
+
+.tabs-bg{
+
+	min-width:100%;
+	max-width:100%;
+	width:100%;
+	background-color:#d3d3d3; 
+	height:52px; 
+	padding: 12 0 0 0;  
+	border-radius:0px 0px 10px 10px;
+	-webkit-border-radius:0px 0px 10px 10px;
+	-moz-border-radius:0px 0px 10px 10px;
+}
+
+
+.tab{
+	
+	padding: 2px 10px 5px 10px;
+	margin-right:15px;
+	margin-top:30px;
+	%margin-bottom:-5px;
+	background-color:rgba(87,89,93, 0.8);
+	border-radius:10px 10px 0px 0px;
+	-webkit-border-radius:10px 10px 0px 0px;
+	-moz-border-radius:10px 10px 0px 0px;
+	font-size:38px;
+	color:white;
+	cursor:pointer;
+	
+}
+
+.tab:hover{
+	
+	background-color:rgba(87,89,93, 1);
+}
+
+
+
+.tab.selected{
+	%font-weight:bold;
+	background-color:white;
+	color:black;
+	cursor:auto;
+}
+
+
+
+
+
+
+.dropdown {
+	position: relative;
+	display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  right: 0;
+  background-color: rgba(87,89,93,1);
+  min-width: 300px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  border-radius:5px 5px 5px 5px;
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+	background-color: white;
+	color:rgba(87,89,93,1);
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #3e8e41;
+}
+
+
+
+
+
+
+
+
+
+
+
+blogname {
+	
+	text-align:center;
+	font-size: 60px;
+	color:rgba(87,89,93, 1);
+	margin-bottom:1em;
+	display:block;
+	
+}
+
+
+date {
+	
+	
+	font-size: 40px;
+	color:rgba(87,89,93, 1);
+	right:0;
+	position:absolute;
+	
+}
+
+
+
+
