--- a/src/styles.css
+++ b/src/styles.css
@@ -42,6 +42,58 @@ body {
 
 
 
+ul {
+    list-style: none;
+    padding-left: 0;
+}
+ul li {
+    position: relative;
+    padding-left: 20px;
+}
+
+ul li:before {
+    content: '';
+    width: 10px;
+    height: 10px;
+    position: absolute;
+    background-image: url('Images/bullet.png');
+    background-size: cover;
+    background-position: center;
+    left: 0;
+    top: 0.6em;
+    transform: translateY(-50%);
+}
+
+
+
+ul ul li:before {
+    content: '';
+    width: 8px;
+    height: 8px;
+    position: absolute;
+    background-image: url('Images/bulletInner.png');
+    background-size: cover;
+    background-position: center;
+    left: 0;
+    top: 0.6em;
+    transform: translateY(-50%);
+}
+
+
+
+
+.githublink{
+
+	padding: 3px; 
+	background-color:rgba(87,89,93, 0.8);
+	color:white;
+	margin-right:20px;
+	font-size:16px;
+	
+}
+
+
+
 .linkspan.smallfont{
 
 
@@ -76,18 +128,6 @@ a {
 }
 
 
-.tabs-bg{
-
-	width:100%; 
-	background-color:#d3d3d3; 
-	height:26px; 
-	padding: 12 0 0 0;  
-	border-radius:0px 0px 5px 5px;
-	-webkit-border-radius:0px 0px 5px 5px;
-	-moz-border-radius:0px 0px 5px 5px;
-
-}
-
 
 .header {
 	background-color: #57595D;
@@ -102,34 +142,6 @@ a {
 	%box-shadow: 5px 4px 8px 0 #424f4f, 6px 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.tab{
-	
-	padding: 2px 10px 5px 10px;
-	margin-right:10px;
-	background-color:rgba(87,89,93, 0.8);
-	border-radius:5px 5px 0px 0px;
-	-webkit-border-radius:5px 5px 0px 0px;
-	-moz-border-radius:5px 5px 0px 0px;
-	font-size:18px;
-	color:white;
-	cursor:pointer;
-	
-}
-
-.tab:hover{
-	
-	background-color:rgba(87,89,93, 1);
-}
-
-
-
-.tab.selected{
-	%font-weight:bold;
-	background-color:white;
-	color:black;
-	cursor:auto;
-	padding-bottom:6px;
-}
 
 .userInput{
 	
@@ -181,6 +193,17 @@ input::-webkit-inner-spin-button {
 	line-height: 1.3em
 	
 }
+
+
+.blog-div{
+	width:70%; 
+	text-align:justify; 
+	margin:auto; 
+	line-height: 1.3em;
+	margin-bottom: 100px;
+	position:relative;
+}
+
 
 
 .anova-bar-odd {
@@ -341,3 +364,123 @@ b.sort-by:after {
 	width:70%;
 	
 }
+
+
+
+
+
+
+
+.tabs-bg{
+
+	width:100%; 
+	background-color:#d3d3d3; 
+	height:28px; 
+	padding: 12 0 0 0;  
+	border-radius:0px 0px 5px 5px;
+	-webkit-border-radius:0px 0px 5px 5px;
+	-moz-border-radius:0px 0px 5px 5px;
+
+}
+
+
+.tab{
+	
+	padding: 2px 10px 5px 10px;
+	margin-right:10px;
+	background-color:rgba(87,89,93, 0.8);
+	border-radius:5px 5px 0px 0px;
+	-webkit-border-radius:5px 5px 0px 0px;
+	-moz-border-radius:5px 5px 0px 0px;
+	font-size:18px;
+	color:white;
+	cursor:pointer;
+	
+}
+
+.tab:hover{
+	background-color:rgba(87,89,93, 1);
+}
+
+
+
+.tab.selected{
+	%font-weight:bold;
+	background-color:white;
+	color:black;
+	cursor:auto;
+	padding-bottom:6px;
+}
+
+
+
+
+
+.dropdown {
+	position: relative;
+	display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  left: 0;
+  margin-top:5px;
+  background-color: rgba(87,89,93,1);
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  %border-radius:5px 5px 5px 5px;
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+	background-color: white;
+	color:rgba(87,89,93,1);
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #3e8e41;
+}
+
+
+
+
+
+
+
+
+
+blogname {
+	
+	text-align:center;
+	font-size: 30px;
+	color:rgba(87,89,93, 1);
+	margin-bottom:1em;
+	display:block;
+	
+}
+
+
+date {
+	
+	
+	font-size: 18px;
+	color:rgba(87,89,93, 1);
+	right:0;
+	position:absolute;
+	
+}
+
+
+
