--- a/src/mobilestyles.css
+++ b/src/mobilestyles.css
@@ -59,11 +59,11 @@ h2 {
 
 .githublink{
 
-	padding: 3px; 
+	padding: 8px 8px; 
 	background-color:rgba(87,89,93, 0.8);
 	color:white;
-	margin-right:20px;
-	font-size:16px;
+	margin-right:30px;
+	font-size:40px;
 	
 }
 
